fix dark mode

--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,6 @@
 
 :root {
   font-family: Avenir, Helvetica, Arial, sans-serif;
-  color-scheme: light dark;
+  color-scheme: dark;
   background-color: #242424;
 }
